--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,14 @@
 #spring.datasource.username = sid
 #spring.datasource.password = sid
 
-spring.datasource.url = jdbc:mysql://${MYSQL_SERVICE_HOST}:${MYSQL_SERVICE_PORT}/${db_name}?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-spring.datasource.username = ${db_username}
-spring.datasource.password = ${db_password}
+#### this is working but, while dpeloying we need to add the env variables in DeploymentConfiguration
+#spring.datasource.url = jdbc:mysql://${MYSQL_SERVICE_HOST}:${MYSQL_SERVICE_PORT}/${db_name}?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+#spring.datasource.username = ${db_username}
+#spring.datasource.password = ${db_password}
+
+spring.datasource.url = jdbc:mysql://${MYSQL_SERVICE_HOST}:${MYSQL_SERVICE_PORT}/${MYSQL_DATABASE}?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+spring.datasource.username = ${MYSQL_USER}
+spring.datasource.password = ${MYSQL_PASSWORD}
 
 
 ## Hibernate Properties
