--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #spring.datasource.username = ${db_username}
 #spring.datasource.password = ${db_password}
 
-spring.datasource.url = jdbc:mysql://${MYSQL_SERVICE_HOST}:${MYSQL_SERVICE_PORT}/${MYSQL_DATABASE}?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+spring.datasource.url = jdbc:mysql://${MYSQL_SERVICE_HOST}:3306/${MYSQL_DATABASE}?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username = ${MYSQL_USER}
 spring.datasource.password = ${MYSQL_PASSWORD}
 
