--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #spring.datasource.username = sid
 #spring.datasource.password = sid
 
-#### this is working but, while dpeloying we need to add the env variables in DeploymentConfiguration
+#### this is working but, while deploying we need to add the env variables in DeploymentConfiguration
 #spring.datasource.url = jdbc:mysql://${MYSQL_SERVICE_HOST}:${MYSQL_SERVICE_PORT}/${db_name}?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 #spring.datasource.username = ${db_username}
 #spring.datasource.password = ${db_password}
